tests/invalid/generic_native_call_not_instantiated.wio
realm ffi {
    @Native
    @CppHeader("native_generic_math.h")
    @CppName(native_generic::DoubleValue)
    @Instantiate(i32)
    fn DoubleValue<T>(value: T) -> T;
}

fn Entry() -> i32 {
    let value = ffi::DoubleValue("wio");
    return 0;
}
